you can select how many days you want. Only useful data are loaded

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -21,3 +21,4 @@
 
 en:
   stock_ticker_title: "Select a stock to see its prices"
+  placeholder_input_days: "Number of days you want (30 by default)"
