--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -22,3 +22,4 @@
 en:
   stock_ticker_title: "Select a stock to see its prices"
   placeholder_input_days: "Number of days you want (30 by default)"
+  add_value_on_stock_btn: "Add a new value to this stock"
